# ActionLineage

./: .dockerignore  .gitignore  ACCEPTANCE_TESTS.md  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  Makefile  PRODUCT_SPEC.md  PROJECT_CHARTER.md  README.md  SECURITY.md  THREAT_MODEL.md  cdk.json  index.html  package-lock.json  package.json  pyproject.toml  tsconfig.json
.github/: copilot-instructions.md  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: adapter_request.yml  bug.yml  compatibility_report.yml  contract_gap.yml  detection_rule.yml  evaluation-feedback.yml  feature.yml  integration-proposal.yml  security-design-review.yml  security_report.yml
.github/workflows/: agent-validation.yml  ci.yml  codeql.yml  dependency-review.yml  release.yml
contracts/examples/: cloud-object-write.json  filesystem-observation.json  mcp-tool-call.json  outbound-http.json  outbound-http.yaml  restricted-exfiltration.json
deploy/docker/: Dockerfile  compose.yaml
deploy/kubernetes/: actionlineage-service.yaml
detections/examples/: restricted-read-to-untrusted-send.yaml
docs/: ADOPTION_CASE_STUDY_TEMPLATE.md  AGENT_PLATFORM_REVIEW_CHECKLIST.md  AGENT_VALIDATION_ARCHITECTURE.md  AGENT_VALIDATION_EVIDENCE.md  AGENT_VALIDATION_PLAN.md  AGENT_VALIDATION_THREAT_MODEL.md  API_REFERENCE.md  CLI_REFERENCE.md  CODING_STANDARDS.md  COMPATIBILITY.md  CONSOLE.md  DATA_MODEL.md  DECISIONS_REQUIRED.md  DEMO_SCENARIO.md  DEPENDENCY_POLICY.md  DETECTION_LAB.md  DRAFT_RELEASE_NOTES_0.1.0a3.md  DRAFT_RELEASE_NOTES_0.1.0a4.md  DRAFT_RELEASE_NOTES_0.1.0a5.md  DRAFT_RELEASE_NOTES_0.1.0a6.md  EVALUATION_REPRODUCTION.md  EXTERNAL_REVIEW_GUIDE.md  FAQ.md  GOOD_FIRST_ISSUES.md  INGESTION.md  INTEGRATIONS.md  INVESTIGATION.md  JOURNAL_INTEGRITY.md  KNOWN_LIMITATIONS.md  LINEAGE_CONTRACTS.md  MATURITY.md  MCP_ADAPTER.md  MIGRATION.md  OBSERVERS.md  OPENTELEMETRY_SEMCONV.md  OPERATIONS.md  OWNER_PUBLICATION_CHECKLIST.md  PACKAGE_MANAGERS.md  PACKS.md  PERFECTION_PLAN.md  (+19 more)
docs/ADR/: 0000-template.md  0001-event-serialization-and-redaction-boundary.md  0002-local-journal-hash-chain.md  0003-evidence-plane-pivot.md  0004-journal-anchors-and-recovery.md  0005-policy-runtime-fail-behavior.md  0006-minimum-corroboration-threshold.md  0007-service-auth-model.md  0008-static-investigation-console.md  0009-postgres-projection-schema.md  0010-stable-journal-source-identity.md  0011-append-checkpoint-and-index-scope.md  0012-observer-attestation-policy.md  0013-canonicalization-v1-conformance.md  0014-causality-model-evolution.md  0015-external-checkpoint-trust-roots.md  0016-protected-evidence-kernel-boundary.md  0017-tenant-isolation-boundary.md  0018-local-durability-failure-semantics.md
docs/evidence/: agent-validation-baseline.json  agent-validation-baseline.md
docs/site/: ACTIONLINEAGE_SITE_OPERATIONS.md
evals/: CAPABILITY_COVERAGE.yaml  README.md  SCENARIO_SCHEMA.json
evals/actionlineage_evals/: __init__.py  __main__.py  adapters.py  artifact_audit.py  baseline.py  boundary.py  environment.py  eventing.py  inspect_tasks.py  linting.py  minimization.py  models.py  provenance.py  replay.py  runner.py  scenarios.py  scoring.py  stateful.py  summary.py  tools.py  triage.py
public/: actionlineage-robots.txt  actionlineage-sitemap.xml
schemas/: actionlineage-event-v1alpha1.schema.json  evidence-link-v1alpha1.schema.json
scripts/: benchmark_journal_ingest.py  check_claims_language.py  check_dependency_licenses.py  check_markdown_links.py  check_release_consistency.py  generate_demo_evidence_map.py  generate_release_provenance.py  generate_sbom.py  secret_scan.py  smoke_public_quickstart.py  write_ci_quality_summary.py  write_release_candidate_manifest.py  write_release_review_index.py
src/: site.ts  styles.css
tests/: __init__.py  test_smoke.py
(+158 files in other folders)
