[build-system]
requires = ["hatchling>=1.27,<2"]
build-backend = "hatchling.build"

[project]
name = "actionlineage"
version = "1.0.0"
description = "Vendor-neutral evidence and detection plane for tool-using agents"
readme = "README.md"
requires-python = ">=3.13"
license = { text = "Apache-2.0" }
authors = [{ name = "Marq Mercado" }]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.13",
  "Typing :: Typed",
  "Topic :: Security",
]
keywords = ["agent-security", "evidence", "lineage", "mcp", "security"]
dependencies = [
  "pydantic>=2.10,<3",
  "typer>=0.15,<1",
]

[project.optional-dependencies]
adapters = [
  "httpx>=0.28,<1",
  "mcp>=1.27,<2",
  "opentelemetry-api>=1.30,<2",
  "opentelemetry-exporter-otlp-proto-http>=1.30,<2",
  "opentelemetry-sdk>=1.30,<2",
  "pyyaml>=6,<7",
  "sqlalchemy>=2,<3",
]
cloud = []
console = []
service = [
  "fastapi>=0.115,<1",
  "pydantic-settings>=2.7,<3",
  "PyJWT[crypto]>=2.10,<3",
  "uvicorn>=0.34,<1",
]
dev = [
  "hypothesis>=6,<7",
  "jsonschema>=4,<5",
  "mypy>=2.1.0,<3",
  "pip-audit>=2,<3",
  "pre-commit>=4,<5",
  "pytest>=8,<10",
  "pytest-asyncio>=0.24,<2",
  "pytest-cov>=5,<8",
  "ruff>=0.9,<1",
]

[project.scripts]
actionlineage = "actionlineage.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/actionlineage"]

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "RUF"]

[tool.mypy]
python_version = "3.13"
strict = true
packages = ["actionlineage"]

[tool.pytest.ini_options]
addopts = "-ra --strict-markers --strict-config"
testpaths = ["tests"]
